Replace uses of deprecated URL constructors